--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,6 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-
 [env:wt32-sc01]
 platform = espressif32
 board = esp-wrover-kit
@@ -19,6 +18,8 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	lvgl/lvgl@^8.3.1
 	lovyan03/LovyanGFX@^0.4.18
+	DHT sensor library@^1.4.0
+    adafruit/Adafruit Unified Sensor@^1.1.4
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
@@ -36,6 +37,8 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	lvgl/lvgl@^8.3.1
 	lovyan03/LovyanGFX@^0.4.18
+	DHT sensor library@^1.4.0
+    adafruit/Adafruit Unified Sensor@^1.1.4
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
