--- a/platformio.ini
+++ b/platformio.ini
@@ -18,26 +18,30 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.19.4
 	lvgl/lvgl@^8.3.1
 	lovyan03/LovyanGFX@^0.4.18
+	DHT sensor library@^1.4.0
+	adafruit/Adafruit Unified Sensor@^1.1.4
 build_flags = 
 	-DBOARD_HAS_PSRAM
 	-mfix-esp32-psram-cache-issue
 	-I lib
 	-D LV_MEM_SIZE="(64U * 1024U)"
-[env:wt32-sc01-plus]
-platform = espressif32
-board = esp32-s3-devkitc-1
-framework = arduino
-board_build.partitions = default_8MB.csv
-board_build.mcu = esp32s3
-board_build.f_cpu = 240000000L
-lib_deps = 
-	fbiego/ESP32Time@^2.0.0
-	bblanchon/ArduinoJson@^6.19.4
-	lvgl/lvgl@^8.3.1
-	lovyan03/LovyanGFX@^0.4.18
-build_flags = 
-	-DBOARD_HAS_PSRAM
-	-mfix-esp32-psram-cache-issue
-	-I lib
-	-D PLUS=1
-	-D LV_MEM_SIZE="(96U * 1024U)"
+; [env:wt32-sc01-plus]
+; platform = espressif32
+; board = esp32-s3-devkitc-1
+; framework = arduino
+; board_build.partitions = default_8MB.csv
+; board_build.mcu = esp32s3
+; board_build.f_cpu = 240000000L
+; lib_deps = 
+; 	fbiego/ESP32Time@^2.0.0
+; 	bblanchon/ArduinoJson@^6.19.4
+; 	lvgl/lvgl@^8.3.1
+; 	lovyan03/LovyanGFX@^0.4.18
+; 	DHT sensor library@^1.4.0
+; 	adafruit/Adafruit Unified Sensor@^1.1.4
+; build_flags = 
+; 	-DBOARD_HAS_PSRAM
+; 	-mfix-esp32-psram-cache-issue
+; 	-I lib
+; 	-D PLUS=1
+; 	-D LV_MEM_SIZE="(96U * 1024U)"
