--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 board_build.partitions = no_ota.csv
+monitor_speed = 115200
 lib_deps = 
 	fbiego/ESP32Time@^2.0.0
 	bblanchon/ArduinoJson@^6.19.4
